# glide

./: .gitignore  LICENSE  README.md  requirements.txt  run.py
.github/workflows/: ci.yml
glide/: __init__.py  app.py  board.py  geometry.py  hud.py  level.py  native_solver.py  settings.py  solver.py
levels/: 01-first-glide.json  02-four-corners.json  03-switchback.json  04-anchor-point.json  05-crosscurrent.json  06-the-long-way.json
native/: CMakeLists.txt  glide_solver.cpp
tools/: benchmark.py  check_native.py  generate_levels.py
